hphp/test/zend/good/ext/standard/tests/file/001.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no symlinks on Windows');
}
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
?>