hphp/test/zend/bad/ext/standard/tests/file/lstat_stat_variation15.php.skipif
<?php
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip.. lstat() not available on Windows');
}
?>